--- a/backend/package.json
+++ b/backend/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "test": "node testRunner.js",
+    "start": "nodemon index.js",
+    "dev": "concurrently \"npm run test\" \"npm run start\""
   },
   "author": "",
   "license": "ISC",
@@ -14,11 +15,18 @@
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
-    "mssql": "^11.0.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
     "sequelize": "^6.37.5",
     "tedious": "^18.6.1"
+  },
+  "devDependencies": {
+    "chai": "^5.2.0",
+    "concurrently": "^9.1.2",
+    "jest": "^29.7.0",
+    "mocha": "^11.1.0",
+    "mssql": "^11.0.1",
+    "supertest": "^7.0.0"
   }
 }
