--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,8 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/material": "^6.4.7",
+    "@shadcn/ui": "^0.0.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -16,6 +18,7 @@
     "chart.js": "^4.4.2",
     "crypto-browserify": "^3.12.0",
     "formik": "^2.4.6",
+    "lucide-react": "^0.479.0",
     "multer": "^1.4.5-lts.1",
     "pdfjs-dist": "^4.2.67",
     "react": "^18.2.0",
