--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "react-pdf": "^8.0.2",
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
+    "three": "^0.174.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
