--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,9 +19,11 @@
     "crypto-browserify": "^3.12.0",
     "formik": "^2.4.6",
     "lucide-react": "^0.479.0",
+    "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
     "pdfjs-dist": "^4.2.67",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.18.0",
     "react-bootstrap": "^2.10.2",
     "react-bootstrap-icons": "^1.11.5",
     "react-chartjs-2": "^5.2.0",
