--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,4 @@
 EMAIL_USER=asmabenbrahem09@gmail.com
 EMAIL_PASS=ryawjbtlfdmqigit
+JWT_SECRET=8f7d3b9a1c4e6f8d2b0e9a7c3d5f1e2b4a6c8d0e9f7b3a1c5d2e4f6
+PORT=5000
