--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "jest": "^29.7.0",
     "mocha": "^11.1.0",
     "mssql": "^11.0.1",
+    "sequelize-cli": "^6.6.2",
     "supertest": "^7.0.0"
   }
 }
