--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,8 @@ EMAIL_USER=asmabenbrahem09@gmail.com
 EMAIL_PASS=ryawjbtlfdmqigit
 JWT_SECRET=8f7d3b9a1c4e6f8d2b0e9a7c3d5f1e2b4a6c8d0e9f7b3a1c5d2e4f6
 PORT=5000
+ZOOM_SDK_KEY=cpr2PizRtmoKr7F8GMXGQ
+ZOOM_SDK_SECRET=zdqmzl3FCb0mMRIrJg8N3BrMoZJ6jsGB
+ZOOM_API_KEY=cpr2PizRtmoKr7F8GMXGQ
+ZOOM_API_SECRET=zdqmzl3FCb0mMRIrJg8N3BrMoZJ6jsGB
+ZOOM_ACCOUNT_ID=3BdoahhcT3OsAAtCvRx16Q
