--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@zoomus/websdk": "^2.18.0",
     "anymatch": "^3.1.3",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
