--- a/backend/.env
+++ b/backend/.env
@@ -7,3 +7,4 @@ ZOOM_SDK_SECRET=zdqmzl3FCb0mMRIrJg8N3BrMoZJ6jsGB
 ZOOM_API_KEY=cpr2PizRtmoKr7F8GMXGQ
 ZOOM_API_SECRET=zdqmzl3FCb0mMRIrJg8N3BrMoZJ6jsGB
 ZOOM_ACCOUNT_ID=3BdoahhcT3OsAAtCvRx16Q
+STACK_OVERFLOW_API_KEY=rl_g9PAXfF7Mj9bU7oFJXSfBJ6UX
