--- a/backend/package.json
+++ b/backend/package.json
@@ -11,17 +11,23 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@xenova/transformers": "^2.17.2",
+    "axios": "^1.9.0",
+    "axios-retry": "^4.5.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.0",
+    "bottleneck": "^2.19.5",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "express": "^4.21.2",
+    "html-to-text": "^9.0.5",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
     "qs": "^6.14.0",
+    "sanitize-html": "^2.16.0",
     "sequelize": "^6.37.5",
     "tedious": "^18.6.1"
   },
