--- a/backend/package.json
+++ b/backend/package.json
@@ -20,9 +20,11 @@
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "express": "^4.21.2",
+    "he": "^1.2.0",
     "html-to-text": "^9.0.5",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "natural": "^8.0.1",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
