--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "chart.js": "^4.4.2",
     "crypto-browserify": "^3.12.0",
     "formik": "^2.4.6",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.479.0",
     "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
