--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "crypto-browserify": "^3.12.0",
     "formik": "^2.4.6",
     "jspdf": "^3.0.1",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.479.0",
     "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
