--- a/backend/package.json
+++ b/backend/package.json
@@ -17,21 +17,25 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.0",
     "bottleneck": "^2.19.5",
+    "connect-session-sequelize": "^7.1.7",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "express": "^4.21.2",
+    "express-session": "^1.18.1",
     "he": "^1.2.0",
     "html-to-text": "^9.0.5",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "natural": "^8.0.1",
+    "node-cache": "^5.1.2",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
     "qs": "^6.14.0",
     "sanitize-html": "^2.16.0",
     "sequelize": "^6.37.5",
-    "tedious": "^18.6.1"
+    "tedious": "^18.6.1",
+    "transformers": "^3.1.0"
   },
   "devDependencies": {
     "chai": "^5.2.0",
