--- a/backend/.env
+++ b/backend/.env
@@ -10,4 +10,4 @@ ZOOM_ACCOUNT_ID=3BdoahhcT3OsAAtCvRx16Q
 STACK_OVERFLOW_API_KEY=rl_g9PAXfF7Mj9bU7oFJXSfBJ6UX
 PYTHON_PATH=C:\Users\ASUS\Desktop\pfe2025\venv\Scripts\python.exe
 SESSION_SECRET=0000
-REACT_APP_API_URL=hhttp://localhost:5000/api
+REACT_APP_API_URL=http://localhost:5000/api
